--- a/TP_Final/code/app/src/main/AndroidManifest.xml
+++ b/TP_Final/code/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Travail_final"
         tools:targetApi="31">
         <activity
+            android:name=".Popup"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="false" />
         <activity
